Fix header layout: social icons align right on desktop

--- a/css/home.css
+++ b/css/home.css
@@ -927,10 +927,23 @@ footer p {
     height: 140px;
   }
 
-  header div {
-    text-align: left;
+  .header-content {
     flex: 1;
     margin-left: 30px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .header-text {
+    text-align: left;
+    flex: 1;
+  }
+
+  .social-icons {
+    flex-shrink: 0;
+    margin: 0;
   }
 
   header h1 {
